# workflow_annotation

./: .gitignore  LICENSE  README.md
demos/: CMakeLists.txt  readme.md
demos/01_echo/: CMakeLists.txt  client.cc  message.cc  message.h  readme.md  server.cc
demos/02_stop/: CMakeLists.txt  server.cc
demos/03_parallel/: CMakeLists.txt  parallel01.cc  readme.md
demos/04_wget/: CMakeLists.txt  wget.cc
demos/05_http_echo/: CMakeLists.txt  echo.cc
demos/06_http_proxy/: CMakeLists.txt  proxy.cc
demos/07_http/: 07_http_no_reply.cc  07_http_simple.cc  CMakeLists.txt  http_01.cc  http_02.cc  http_03.cc  http_echo_defer.cc  http_no_reply.cc  http_parallel.cc  http_req.cc  http_series.cc
demos/08_max_con/: CMakeLists.txt  client01.cc  client02.cc  server.cc
demos/09_timer/: CMakeLists.txt  timer01.cc  timer02.cc
demos/10_http_forward/: CMakeLists.txt  forward.cc
demos/11_life_cycle/: CMakeLists.txt  life.cc
demos/12_counter/: CMakeLists.txt  counter_intro.cc  counter_to_parallel.cc
demos/13_block_series/: block_series.cc
demos/14_restful/: 2.txt  CMakeLists.txt  base64.cc  base64.h  encode.h  readme.md  restful.py  restful_client.cc  restful_server.cc
demos/15_file/: 15_file_server_01.cc  15_file_server_02.cc  15_file_write.cc  CMakeLists.txt  file_server.cc
demos/16_graph/: 16_graph_00.cc  16_graph_01.cc  16_graph_02.cc  CMakeLists.txt  graph.cc
demos/17_go_task/: CMakeLists.txt  go.cc  go_simple.cc
demos/18_con_ctx/: ctx.cc
demos/19_parallel/: CMakeLists.txt  get_all_para.cc
demos/20_dynamic/: CMakeLists.txt  dynamic.cc
demos/21_cmp/: 21_clent01.cc  21_client02.cc  21_server.cc  CMakeLists.txt  test01.cc  test02.cc
demos/21_shut_conn/: server.cc
demos/22_dns/: 22_dns_01.cc  22_dns_02.cc  22_dns_03.cc  22_dns_04.cc  22_dns_05.cc  22_dns_server.cc  22_resolver_01.cc  22_test_dns_cache.cc  CMakeLists.txt
demos/23_list/: 23_list_01.cc  23_list_01_init.c  23_list_02_add.c  23_list_03_del.c  23_list_04_move.c  23_list_05_splice.c  23_list_05_splice_init.c  24_06_list_traverse.c  CMakeLists.txt  list.h
demos/24_thrd_task/: 24_thrd_task_01.cc  24_thrd_task_02.cc  CMakeLists.txt
demos/25_msgque/: 25_msgque.cc  CMakeLists.txt  msgqueue.c
demos/26_resource_pool/: 26_issue_559_client.cc  26_issue_559_server.cc  26_resource_pool_01.cc  26_resource_pool_02.cc  26_resource_pool_03.cc  CMakeLists.txt
demos/27_parse_uri/: 27_request_uri_split.cc  27_unorderd_split.cc  27_uri_parser_01.cc  CMakeLists.txt
demos/28_string_util/: 28_string_01.cc  CMakeLists.txt
demos/29_upstream/: 29_upstream_01.cc  29_upstream_hash.cc  29_upstream_hash_define.cc  29_upstream_manual.cc  29_upstream_random.cc  29_upstream_server.cc  29_upstream_weighted.cc  CMakeLists.txt
demos/30_kernel_comm/: 30_kernel_comm_01.cc  30_test_server.cc  CMakeLists.txt
demos/31_mysql/: 31_01_create_db.cc  31_01_show_db.cc  31_02_conn.cc  31_mysql_cli.cc  31_mysql_intro_demo.cc  CMakeLists.txt
demos/32_cpu_server/: readme.md
demos/33_header/: 33_header_pair.cc  CMakeLists.txt  test.py
demos/34_cookie/: 34_cookie_test.cc
demos/34_https/: 34_https_test.cc  CMakeLists.txt  server.crt  server.key
demos/35_dismiss/: 35_dismiss_test.cc  CMakeLists.txt
demos/36_task/: 36_parallel.cc  36_series.cc  CMakeLists.txt
demos/37_rb_tree/: 37_rb_tree_01.c  37_rb_tree_02.c  Makefile  rbtree.h
demos/38_json_parser/: json_parser.c  json_parser.h  test.json
demos/3rd/: util.h
demos/deprecated/: logger.c  logger.h
demos/other/: 01_other.cc  CMakeLists.txt
other/: 01_transfer_encoding.md  02_dns.md  03_dns_linux.md  05_name_service.md  06_addr_info.md  todo.md
other/Json/: test01.cc
other/base_to_derived/: test.cc
other/c_thread/: 01_pthread_key_t.c  02_pthread_key_t.c  readme.md
other/callback/: func_ptr.cc  test.cc  test2.cc
other/callback_param/: test.cc  test_01.cc
other/cmake/: find_cmake.md  find_package.md  install.md
other/cookie/: readme.md
other/cors/: readme.md
other/dns/: 03_dns_linux.md  04_http_dns.md
other/global/: a.h  global.cc  global.h  main.cc
other/http_router/: 01_libhv.md  02_drogon.md  readme.md
other/inherit/: 01.cc  02.cc  03.cc  04.cc
other/inl_file/: A.h  A.inl  main.cc
other/lambda/: 01.cc
other/map_case_intensive/: test01.cc  test02.cc
other/map_vs_umap/: bench.cc
other/post/: multi_part_form.md  multipart-parser-c.md  readme.md
other/relpath/: test.cc
other/size/: 01.cc  02.cc  03.cc
other/test/: test.cc
other/time/: test.cc
other/unordered_map/: 01.cc  02.cc
other/web_template/: readme.md
src_analysis/: 01_http.md  02_epoll.md  02_epoll_02.md  02_epoll_03.md  03_communicate.md  04_http_improve.md  05_poller_opt.md  06_dns.md  06_dns_02.md  06_dns_03.md  06_dns_protocol.md  06_dns_routine.md  07_data_structure.md  08_msgqueue.md  09_http_task.md  10_cache_lock.md  11_parallel.md  11_subtask.md  12_go_task.md  12_thread_task.md  12_thread_task_01.md  13_concept.md  14_thrd_pool.md  15_timer_task.md  16_series_work.md  18_http_01.md  18_http_02.md  18_http_03.md  18_http_04.md  19_http_03.md  19_resource_pool.md  19_resource_pool_01.md  20_RouteManager.md  20_dns_cache.md  21_rb_tree_opt.md  22_http_server_00.md  22_http_server_01.md  22_http_server_02.md  23_json_01_parse.md  23_json_02_access.md  (+13 more)
workflow/: ..result.cached.b5523bc21576463b9b8b0f1b38c22743dde7d0a046c3f0c25f3283618ce889a8  .cpptree.list  CMakeLists_Headers.txt  workflow-config.cmake
workflow/build.cmake/: config.toinstall.cmake
workflow/src/algorithm/: DnsRoutine.cc
workflow/src/client/: WFDnsClient.cc
workflow/src/factory/: DnsTaskImpl.cc  FileTaskImpl.cc  HttpTaskImpl.cc  WFResourcePool.cc  WFResourcePool.h  WFTask.h  WFTask.inl  WFTaskFactory.cc  WFTaskFactory.h  WFTaskFactory.inl  Workflow.cc  Workflow.h
workflow/src/kernel/: CMakeLists.txt  CommRequest.cc  CommRequest.h  CommScheduler.cc  CommScheduler.h  Communicator.cc  Communicator.h  ExecRequest.h  Executor.cc  Executor.h  SleepRequest.h  SubTask.cc  SubTask.h  logger.h  mpoller.c  mpoller.h  msgqueue.c  poller.c  poller.h  rbtree.h  thrdpool.c
(+18 files in other folders)
