add_executable(15_file_server_01 15_file_server_01.cc)
target_link_libraries(15_file_server_01 workflow)

add_executable(15_file_server_02 15_file_server_02.cc)
target_link_libraries(15_file_server_02 workflow)

add_executable(15_file_write 15_file_write.cc)
target_link_libraries(15_file_write workflow)




