add_executable(22_dns_01 22_dns_01.cc)
target_link_libraries(22_dns_01 workflow)

add_executable(22_dns_02 22_dns_02.cc)
target_link_libraries(22_dns_02 workflow)

add_executable(22_dns_03 22_dns_03.cc)
target_link_libraries(22_dns_03 workflow)

add_executable(22_dns_04 22_dns_04.cc)
target_link_libraries(22_dns_04 workflow)

add_executable(22_dns_05 22_dns_05.cc)
target_link_libraries(22_dns_05 workflow)

add_executable(22_test_dns_cache 22_test_dns_cache.cc)
target_link_libraries(22_test_dns_cache workflow)

